[gd_scene load_steps=14 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://characters/blue/blue bullet/bullet 1.png" type="Texture" id=2]
[ext_resource path="res://characters/blue/blue bullet/bullet 2.png" type="Texture" id=3]
[ext_resource path="res://characters/blue/blue bullet/bullet 3.png" type="Texture" id=4]
[ext_resource path="res://characters/blue/blue bullet/bullet 4.png" type="Texture" id=5]
[ext_resource path="res://characters/blue/blue bullet/bullet 5.png" type="Texture" id=6]
[ext_resource path="res://characters/blue/blue bullet/bullet 6.png" type="Texture" id=7]
[ext_resource path="res://characters/blue/blue bullet/bullet 7.png" type="Texture" id=8]
[ext_resource path="res://characters/blue/blue bullet/bullet 8.png" type="Texture" id=9]
[ext_resource path="res://characters/blue/blue bullet/bullet 9.png" type="Texture" id=10]
[ext_resource path="res://music/bubble pop.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 5.91087

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.649915, -0.356186 )
scale = Vector2( 0.777158, 0.788478 )

[node name="Shot_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
